# drater

./: Cargo.toml  README.md  static.toml  stock.yaml
fundamental_example/: cash_flow.json  income_statement.json  overview.json
fundamental_example/AAPL/: balance_sheet.json
src/: fetch.rs  index.html  main.rs  rating.rs
