[package]
name = "drater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.26.0", features = ["full"] }
serde_yaml = "0.9.19"
serde_json = "1.0.94"
serde= { version = "1.0.156", features = ["derive"] }
reqwest= "0.11.14"